--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 document.getElementById('button').onclick = function() {
   document.getElementById('text').textContent = (phrases[randIndex]); }"> 
       <input type="button" id="button" value="ВЖУХ" />
-      <span id="text"> </span> 
+      <div id="text"> </div> 
     </form>
     
     <script> let phrases = [
@@ -112,9 +112,12 @@ document.getElementById('button').onclick = function() {
   "Стремитесь не к успеху, а к ценностям, которые он дает",
   "Сложнее всего начать действовать, все остальное зависит только от упорства.",
   "Надо любить жизнь больше, чем смысл жизни.",
-	"ЧО СМОТРИШЬ?",
-  "Любишь кататься - плоти за проезд!",
+  "ЧО СМОТРИШЬ?",
   "Все что здесь есть - все это есть.",
+  "Любишь кататься - плати за проезд",
+  "Одна ошибка и ты ошибся",
+  "Мама всегда говорила: «Сила, она как пиво, есть темная, есть светлая».",
+  "Время пострелять",
   
 												
 ]
