--- a/index.html
+++ b/index.html
@@ -2,128 +2,159 @@
 <html>
 <head>
 	<title>Recipes</title>
-	<style type="text/css">
-		body {
-			background-color: Beige;
-		}
-	</style>
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Roboto Mono' rel='stylesheet'>
+	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>	
 	<h1>Рецепты</h1>
 		<details>
 	  		<summary>Бисквитный пирог</summary>
-	  		<ul>
-	  		<li>Яйца - 4шт.</li> 
-	  		<li>Сахар - 250гр.</li>
-	  		<li>Молоко - 150мл.</li>
-	  		<li>Растительное масло - 100мл.</li>
-	  		<li>Мука - 300гр.</li> 
-	  		<li>Разрыхлитель теста - 1шт.</li> 
-	  		<li>Ванилин - 1шт.</li> 
-	  		</ul>
-		  	 Яйца и сахар взбиваем минут пятнадцать, добавить молоко, растительное масло. <br>Добавить муку, разрыхлитель и ванилин.<br> Замешиваем тесто; 
-		  	 Выпекать 50 минут в мультиварке (режим "Выпечка")
+	  		<p></p>
+	  		<div class="ingredients">
+	  		<input type="checkbox">	Яйца - 4шт. <br>
+	  		<input type="checkbox">	Сахар - 250гр.<br>
+	  		<input type="checkbox">	Молоко - 150мл.<br>
+	  		<input type="checkbox">	Растительное масло - 100мл.<br>
+	  		<input type="checkbox">	Мука - 300гр.<br>
+	  		<input type="checkbox">	Разрыхлитель теста - 1шт.<br>
+	  		<input type="checkbox">	Ванилин - 1шт.<br>
+	  		</div>
+	  		<div class="cooking">
+	  		<p>
+		  	 <input type="checkbox">Яйца и сахар взбивать 15 минут.<br> 
+		  	 <input type="checkbox">Добавить молоко. <br> 
+		  	 <input type="checkbox">Сливочное масло. <br> 
+		  	 <input type="checkbox">Добавить муку, разрыхлитель и ванилин.<br> 
+		  	 <input type="checkbox">Замешиваем тесто; <br> 
+		  	 <input type="checkbox">Выпекать 50 минут в мультиварке (режим "Выпечка")<br> 
+		  	</p>
+		  	<div class="note">Тестовый текст для примечания</div>
 	 	</details>
 	 		<br>
 	 	
 	 
 		<details>
 	 		<summary>Лагман</summary>
-	  		<ul>
-	  		<li>Мясо - 500гр.</li> 
-	  		<li>Лапша - 400гр.</li>
-	  		<li>Сладкий перец - 1шт.</li>
-	  		<li>Помидоры - 2шт. 🍅</li>
-	  		<li>Лук - 1шт.</li>
-	  		<li>Чеснок - 2 зубчика.</li>
-	  		<li>Петрушка - небольшой пучок</li>
-	  		<li>Соль, перец - по вкусу</li>
-	  		</ul>
-	  		Мясо и овощи нарезать кубиками. <br>
-		  	Мясо обжарить, добавлять морковь, лук и перец, обжарить. Добавить помидор. <br>
-		  	Pаливаем водой и до готовности мяса тушим. В конце варки добавить картошку.<br>
-		  	Лапшу отварить отдельно.
+	 		<p></p>
+	  		<div class="ingredients">
+	  	 	<input type="checkbox">	Мясо - 500гр. <br>
+	  		<input type="checkbox">	Лапша - 400гр.<br>
+	  		<input type="checkbox">	Сладкий перец - 1шт.<br>
+	  		<input type="checkbox">	Помидоры - 2шт. 🍅<br>
+	  		<input type="checkbox">	Лук - 1шт.<br>
+	  		<input type="checkbox">	Чеснок - 2 зубчика.<br>
+	  		<input type="checkbox">	Петрушка - небольшой пучок<br>
+	  		<input type="checkbox">	Соль, перец - по вкусу<br>
+	  		</div>
+	  		<div class="cooking">
+	  		<p>
+	  		<input type="checkbox">Мясо и овощи нарезать кубиками. <br>
+		  	<input type="checkbox">Мясо обжарить.<br> 
+		  	<input type="checkbox">Добавить морковь, лук, перец и помидор. Обжарить.  <br>
+		  	<input type="checkbox">Заливаем водой и до готовности мяса тушим. <br>
+		  	<input type="checkbox">В конце варки добавить картошку.<br>
+		  	<input type="checkbox">Лапшу отварить отдельно.<br>
+		  	</p>
+		   	</div>
 	 	</details>
 	 		<br>
 
 	 	<details>
 	 		<summary>Манты</summary>
-	  		<ul><strong>На 1кг. фарша</strong>
-	  		<li>Фарш свинина - 500гр.</li> 
-	  		<li>Фарш курица - 500гр.</li>
-	  		<li>Лук - 1кг.</li>
-	  		<li>Тесто (мука + вода + соль + 2ст.л. подсолнечного масла)</li>
-	  		</ul>
-	  			Замесить крутое тесто, убрать в пакет и в холодильник.<br>
-	  			Лук резать мелким кубиком. Немного посолить, чтобы сок дал, а потом смешать с фаршем. <br>
-	  			Кружки теста смазать сливочным маслом.<br>
-	  			Поставить на мантышницу после закипания воды.<br>
-	  			Готовить 30-35мин.<br>
-
+	 		<div class="ingredients">
+		  		<strong>На 1кг. фарша</strong><br>
+		  		<input type="checkbox">	Фарш свинина - 500гр. <br>
+		  		<input type="checkbox">	Фарш курица - 500гр.<br>
+		  		<input type="checkbox">	Лук - 1кг.<br>
+		  		<input type="checkbox">	Тесто (мука + вода + соль + 2ст.л. подсолнечного масла)<br>
+	  		</div>
+	  		<p></p>
+	  		<div class="cooking">
+	  			<input type="checkbox">Замесить крутое тесто, убрать в пакет и в холодильник.<br>
+	  			<input type="checkbox">Лук резать мелким кубиком. Немного посолить, чтобы дал сок, а потом смешать с фаршем. <br>
+	  			<input type="checkbox">Кружки теста смазать сливочным маслом.<br>
+	  			<input type="checkbox">Поставить на мантышницу после закипания воды.<br>
+	  			<input type="checkbox">Готовить 30-35мин.<br>
+	  		</div>
 	 	</details>
 	 		<br>
 
 	 	<details>
 	 		<summary>Макароны с курицей и грибами</summary>
-	  		<ul>
-	  		<li>Филе курицы - 400гр.</li> 
-	  		<li>Шампиньоны - 400гр.</li>
-	  		<li>Сливки - 250гр </li>
-	  		<li>Лук - 1шт.</li>
-	  		<li>Чеснок - 2 зубчика.</li>
-	  		<li>Макароны - 400гр.</li>
-	  		</ul>
-		  	Моем куриное филе. Затем нарезаем его ломтиками. Шампиньоны режем пластинками. Лук режем как нам нравится.Чеснок мелко рубим. <br>
-			Ставим вариться макароны в кипящей подсоленной воде.<br>
-			На большой сковородке разогреваем масло. Отправляем туда куру, жарим на достаточно интенсивном огне. Когда мясо станет белым, солим и перчим.<br>
-			Затем отправляем к ней шампиньоны.<br>
-			Обжариваем все вместе, помешивая, до золотистости (Пока из грибов не испарится жидкость). <br>
-			Затем всыпаем лук, перемешиваем и жарим минуту. Затем кидаем чеснок, поступаем также. <br>
-			Вливаем сливки, уменьшаем огонь до минимума и ждем пока забулькает. <br>
-			Пробуем на соль и доперчиваем.<br>
-			Сварившуюся аль-денте пасту (на минуту меньше, чем указано на упаковке), сливаем и отправляем в соус. Перемешиваем и выключаем тут же.<br>
-			Так же рекомендую при подаче добавить соус цезарь.
+	  		<p></p>
+	  		<div class="ingredients">
+		  		<input type="checkbox">Филе курицы - 400гр.<br>
+		  		<input type="checkbox">Шампиньоны - 400гр.<br>
+		  		<input type="checkbox">Сливки - 250гр <br>
+		  		<input type="checkbox">Лук - 1шт.<br>
+		  		<input type="checkbox">Чеснок - 2 зубчика.<br>
+		  		<input type="checkbox">Макароны - 400гр.<br>
+	  		</div>
+	  		<p></p>
+	  		<div class="cooking">
+			  	<input type="checkbox">Моем куриное филе. Затем нарезаем его ломтиками. Шампиньоны режем пластинками. Лук режем как нам нравится.Чеснок мелко рубим. <br>
+				<input type="checkbox">Ставим вариться макароны в кипящей подсоленной воде.<br>
+				<input type="checkbox">На большой сковородке разогреваем масло. Отправляем туда куру, жарим на достаточно интенсивном огне. Когда мясо станет белым, солим и перчим.<br>
+				<input type="checkbox">Затем отправляем к ней шампиньоны.<br>
+				<input type="checkbox">Обжариваем все вместе, помешивая, до золотистости (Пока из грибов не испарится жидкость). <br>
+				<input type="checkbox">Затем всыпаем лук, перемешиваем и жарим минуту. Затем кидаем чеснок, поступаем также. <br>
+				<input type="checkbox">Вливаем сливки, уменьшаем огонь до минимума и ждем пока забулькает. <br>
+				<input type="checkbox">Пробуем на соль и доперчиваем.<br>
+				<input type="checkbox">Сварившуюся аль-денте пасту (на минуту меньше, чем указано на упаковке), сливаем и отправляем в соус. Перемешиваем и выключаем тут же.<br>
+				<input type="checkbox">Так же рекомендую при подаче добавить соус цезарь.
+			</div>
 		</details>
 	 	<br>
 
 
 	 	<details>
 	  		<summary>Паста</summary>
-	  		<ul>
-	  		<li>Фарш - 500гр.</li> 
-	  		<li>Лук - 1шт.</li>
-	  		<li>Морковь - 1шт.</li>
-	  		<li>Сельдерев (стебель) - 1шт.</li>
-	  		<li>Чеснок - 2 зубчика.</li>
-	  		<li>Томатная паста - 3 столовые ложки.</li>
-	  		<li>Соль, перец, куркума, паприка - по вкусу</li>
-	  		<li>Паста (Макароны такие с птичкой)</li>
-	  		</ul>
-		  	Лук, морковь, чеснок, сельдерей порезать и жарить 10 мин. <br>
-			Добавить фарш, размять комочки, жарить 10 мин. <br>
-			Добавить немного молока\сливок, жарить 5 мин. <br>
-			Добавить специи, размешать, жарить 5 мин. <br>
-			Добавить томатную пасту, жарить 15 мин. 
-			Макароны приготовить Al dente (<em>почти готово</em>).
+	  		<p></p>
+	  		<div class="ingredients">
+		  		<input type="checkbox">Фарш - 500гр.<br>
+		  		<input type="checkbox">Лук - 1шт.<br>
+		  		<input type="checkbox">Морковь - 1шт.<br>
+		  		<input type="checkbox">Сельдерев (стебель) - 1шт.<br>
+		  		<input type="checkbox">Чеснок - 2 зубчика.<br>
+		  		<input type="checkbox">Томатная паста - 3 столовые ложки.<br>
+		  		<input type="checkbox">Соль, перец, куркума, паприка - по вкусу<br>
+		  		<input type="checkbox">Паста (Макароны такие с птичкой)<br>
+	  		</div>
+	  		<p></p>
+	  		<div class="cooking">
+			  	<input type="checkbox">Лук, морковь, чеснок, сельдерей порезать и жарить 10 мин. <br>
+				<input type="checkbox">Добавить фарш, размять комочки, жарить 10 мин. <br>
+				<input type="checkbox">Добавить немного молока\сливок, жарить 5 мин. <br>
+				<input type="checkbox">Добавить специи, размешать, жарить 5 мин. <br>
+				<input type="checkbox">Добавить томатную пасту, жарить 15 мин. <br>
+				<input type="checkbox">Макароны приготовить Al dente (<em>почти готово</em>).<br>
+			</div>
 	 	</details>
 	 	<br>
 
 	 	<details>
 	 		<summary>Плов</summary>
-	  		<ul>
-	  		<strong>На 1кг. мяса</strong>
-	  		<li>Мясо - 1кг.</li> 
-	  		<li>Рис для плова - 1кг.</li>
-	  		<li>Масло - 300мл.</li>
-	  		<li>Лук - 0,5кг.</li>
-	  		<li>Чеснок - 2 зубчика.</li>
-	  		<li>Приправа для плова - 2ст.л.</li>
-	  		<br>
-	  		 Рис замачиваем минут на 30 в холодной воде. <br>
-	  		 В раскалённое масло кидаем мясо, обжарить до золотистой корочки<br>
-	  		 Потом  добавить лук и морковь, всё обжарить и добавить воды, тушить<br>Промытый рис закладываем в казан, заливаем водой на два пальца. <br>Добавляем капельку уксуса и приправа для плова, накрыть крышкой<br>
-	  		 После того как вода выкипит - оставить плов под крышкой, пускай "дойдёт". Минут 20.<br>
-
+	  		<p></p>
+	  		<div class="ingredients">
+		  		<strong>На 1кг. мяса</strong>
+		  		<input type="checkbox">Мясо - 1кг.<br>
+		  		<input type="checkbox">Рис для плова - 1кг.<br>
+		  		<input type="checkbox">Масло - 300мл.<br>
+		  		<input type="checkbox">Лук - 0,5кг.<br>
+		  		<input type="checkbox">Чеснок - 2 зубчика.<br>
+		  		<input type="checkbox">Приправа для плова - 2ст.л.<br>
+	  		</div>
+	  		<p></p>
+	  		<div class="cooking">
+		  		 <input type="checkbox">Рис замачиваем минут на 30 в холодной воде. <br>
+		  		 <input type="checkbox">В раскалённое масло кидаем мясо, обжарить до золотистой корочки<br>
+		  		 <input type="checkbox">Потом  добавить лук и морковь, всё обжарить и добавить воды, тушить<br>
+		  		 <input type="checkbox">Промытый рис закладываем в казан, заливаем водой на два пальца. <br>
+		  		 <input type="checkbox">Добавляем капельку уксуса и приправа для плова, накрыть крышкой<br>
+		  		 <input type="checkbox">После того как вода выкипит - оставить плов под крышкой, пускай "дойдёт". Минут 20.<br>
+	  		 </div>
 	  		
 	  		</ul>
 	  		
@@ -133,39 +164,47 @@
 
 	 	<details>
 	  		<summary>Чебуреки</summary>
-	  		<ul>
-	  		<li>Вода 300мл</li> 
-	  		<li>Яйцо - 1шт.</li>
-	  		<li>Соль - 1 чайная ложка</li>
-	  		<li>Подсолнечное масло - две столовые ложки.</li>
-	  		</ul>
-		  	Замесить тесто (как на пальмени), убрать в пакет и в холодильник. <em>Чем больше лежит тем вкуснее тесто.</em><br> 
-		  	В фарш добавить лук, соль и перец по вкусу, воду примерно 150мл.<br>
-		  	Первые чебуреки выкладывать на бумажное полотенце (чтобы масло впиталось).
+	  		<p></p>
+	  		<div class="ingredients">
+		  		<input type="checkbox">Вода 300мл<br>
+		  		<input type="checkbox">Яйцо - 1шт.<br>
+		  		<input type="checkbox">Соль - 1 чайная ложка<br>
+		  		<input type="checkbox">Подсолнечное масло - две столовые ложки.<br>
+	  		</div>
+	  		<p></p>
+	  		<div class="cooking">
+			  	<input type="checkbox">Замесить тесто (как на пальмени), убрать в пакет и в холодильник. <em>Чем больше лежит тем вкуснее тесто.</em><br> 
+			  	<input type="checkbox">В фарш добавить лук, соль и перец по вкусу, воду примерно 150мл.<br>
+			  	<input type="checkbox">Первые чебуреки выкладывать на бумажное полотенце (чтобы масло впиталось).<br>
+			</div>
 	 	</details>
 	 		<br>
 
 	 	
 	 	<details>
 	  		<summary>Шурпа</summary>
-	  		<ul>
-	  		<li>Мясо - 1кг</li> 
-	  		<li>Лук - 0,5кг</li>
-	  		<li>Морковь - 0,5кг</li>
-	  		<li>Сладкий перец - 2 шт.</li>
-	  		<li>Помидоры - 2 шт.</li>
-	  		</ul>
-		  	Опционально добавить баклажан. Помидор можно заменить на томатную пасту. <br>
-		  	Мясо режем средними кусками, морковь кружками, лук и перец полукольцами. <br>
-		  	Обжариваем, заливаем водой и тушим до полуготовности мяса. <br>
-		  	Картошку режем попалам, если крупная на четыре части. Закидываем. <br>
-		  	Соль и приправу по вкусу (мама рекомендует хмели-сунели). <br>
-		  	За 5 минут до готовности можно посыпать зеленью и накрыть крышкой.
+	  		<p></p>
+	  		<div class="ingredients">
+		  		<input type="checkbox">Мясо - 1кг <br>
+		  		<input type="checkbox">Лук - 0,5кг<br>
+		  		<input type="checkbox">Морковь - 0,5кг<br>
+		  		<input type="checkbox">Сладкий перец - 2 шт.<br>
+		  		<input type="checkbox">Помидоры - 2 шт.<br>
+		  	</div>
+		  	<p></p>
+	  		<div class="cooking">
+		  		<input type="checkbox">Опционально добавить баклажан. Помидор можно заменить на томатную пасту. <br>
+			  	<input type="checkbox">Мясо режем средними кусками, морковь кружками, лук и перец полукольцами. <br>
+			  	<input type="checkbox">Обжариваем, заливаем водой и тушим до полуготовности мяса. <br>
+			  	<input type="checkbox">Картошку режем попалам, если крупная на четыре части. Закидываем. <br>
+			  	<input type="checkbox">Соль и приправу по вкусу (мама рекомендует хмели-сунели). <br>
+			  	<input type="checkbox">За 5 минут до готовности можно посыпать зеленью и накрыть крышкой. <br>
+		  	</div>
 
 	 	</details>
 	 	<br>
 	 	
-		<details>
+		<!-- <details>
 	  		<summary>Энчилада</summary>
 	  		<ul><h3>Соус:</h3>
 		  		<li>Чеснок – 1шт.
@@ -211,6 +250,6 @@
 				Залить остатками соуса и сыра.<br>
 				250 градусов, 15-20 минут запекать.<br>
 	 	</details>
-	 	<br>
+	 	<br> -->
 </body>
 </html>
