--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Recipes</title>
 	<meta charset="utf-8">
-	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet'>
 	<link rel="stylesheet" type="text/css" href="css.css">
 	<meta name="viewport" content="width=device-width, user-scalable=yes">
 </head>
