--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Recipes</title>
 	<meta charset="utf-8">
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet'>
+	<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet'>
 	<link rel="stylesheet" type="text/css" href="css.css">
 	<meta name="viewport" content="width=device-width, user-scalable=yes">
 </head>
@@ -16,18 +16,18 @@
 	  		<summary>Бисквитный пирог</summary>
 	  		<p></p>
 	  		<div class="ingredients">
-		  		<input type="checkbox">	Яйца - 4шт. <br>
-		  		<input type="checkbox">	Сахар - 250гр.<br>
-		  		<input type="checkbox">	Молоко - 150мл.<br>
-		  		<input type="checkbox">	Растительное масло - 100мл.<br>
-		  		<input type="checkbox">	Мука - 300гр.<br>
-		  		<input type="checkbox">	Разрыхлитель теста - 1шт.<br>
-		  		<input type="checkbox">	Ванилин - 1шт.<br>
+		  		<input type="checkbox">	<span>Яйца - 4шт. </span><br>
+		  		<input type="checkbox">	<span>Сахар - 250гр.</span><br>
+		  		<input type="checkbox">	<span>Молоко - 150мл.</span><br>
+		  		<input type="checkbox">	<span>Растительное масло - 100мл.</span><br>
+		  		<input type="checkbox">	<span>Мука - 300гр.</span><br>
+		  		<input type="checkbox">	<span>Разрыхлитель теста - 1шт.</span><br>
+		  		<input type="checkbox">	<span>Ванилин - 1шт.</span><br>
 	  		</div>
 	  		<div class="cooking">
 	  		<p>
 	  			<ul>
-				  	 <li>Яйца и сахар взбивать 15 минут.</li>
+				  	 <li>Яйца и сахар взбивать 15 минут.</li> 
 				  	 <li>Добавить молоко. </li>
 				  	 <li>Сливочное масло. </li>
 				  	 <li>Добавить муку, разрыхлитель и ванилин.</li>
@@ -44,14 +44,14 @@
 	 		<summary>Лагман</summary>
 	 		<p></p>
 	  		<div class="ingredients">
-			  	 	<input type="checkbox">	Мясо - 500гр. <br>
-			  		<input type="checkbox">	Лапша - 400гр.<br>
-			  		<input type="checkbox">	Сладкий перец - 1шт.<br>
-			  		<input type="checkbox">	Помидоры - 2шт. 🍅<br>
-			  		<input type="checkbox">	Лук - 1шт.<br>
-			  		<input type="checkbox">	Чеснок - 2 зубчика.<br>
-			  		<input type="checkbox">	Петрушка - небольшой пучок<br>
-			  		<input type="checkbox">	Соль, перец - по вкусу<br>
+			  	 	<input type="checkbox">	<span>	Мясо - 500гр.  </span><br>
+			  		<input type="checkbox">	<span>	Лапша - 400гр. </span><br>
+			  		<input type="checkbox">	<span>Сладкий перец - 1шт. </span><br>
+			  		<input type="checkbox">	<span>Помидоры - 2шт. 🍅 </span><br>
+			  		<input type="checkbox">	<span>Лук - 1шт. </span><br>
+			  		<input type="checkbox">	<span>Чеснок - 2 зубчика. </span><br>
+			  		<input type="checkbox">	<span>Петрушка - небольшой пучок </span><br>
+			  		<input type="checkbox">	<span>Соль, перец - по вкусу </span><br>
 	  		</div>
 	  		<div class="cooking">
 	  		<p>
@@ -73,10 +73,10 @@
 	 		<div class="ingredients">
 	 			<p></p>
 		  		<strong>На 1кг. фарша</strong><br>
-		  		<input type="checkbox">	Фарш свинина - 500гр. <br>
-		  		<input type="checkbox">	Фарш курица - 500гр.<br>
-		  		<input type="checkbox">	Лук - 1кг.<br>
-		  		<input type="checkbox">	Тесто (мука + вода + соль + 2ст.л. подсолнечного масла)<br>
+		  		<input type="checkbox">	<span>Фарш свинина - 500гр.  </span><br>
+		  		<input type="checkbox">	<span>Фарш курица - 500гр. </span><br>
+		  		<input type="checkbox">	<span>Лук - 1кг. </span><br>
+		  		<input type="checkbox">	<span>Тесто (мука + вода + соль + 2ст.л. подсолнечного масла) </span><br>
 	  		</div>
 	  		<p></p>
 	  		<div class="cooking">
@@ -95,12 +95,12 @@
 	 		<summary>Макароны с курицей и грибами</summary>
 	  		<p></p>
 	  		<div class="ingredients"> <br>
-		  		<input type="checkbox">Филе курицы - 400гр.<br>
-		  		<input type="checkbox">Шампиньоны - 400гр.<br>
-		  		<input type="checkbox">Сливки - 250гр <br>
-		  		<input type="checkbox">Лук - 1шт.<br>
-		  		<input type="checkbox">Чеснок - 2 зубчика.<br>
-		  		<input type="checkbox">Макароны - 400гр.<br>
+		  		<input type="checkbox"><span>Филе курицы - 400гр. </span><br>
+		  		<input type="checkbox"><span>Шампиньоны - 400гр. </span><br>
+		  		<input type="checkbox"><span>Сливки - 250гр  </span><br>
+		  		<input type="checkbox"><span>Лук - 1шт. </span><br>
+		  		<input type="checkbox"><span>Чеснок - 2 зубчика. </span><br>
+		  		<input type="checkbox"><span>Макароны - 400гр. </span><br>
 	  		</div>
 	  		<p></p>
 	  		<div class="cooking">
@@ -127,14 +127,14 @@
 	  		<summary>Паста</summary>
 	  		<p></p>
 	  		<div class="ingredients">
-		  		<input type="checkbox">Фарш - 500гр.<br>
-		  		<input type="checkbox">Лук - 1шт.<br>
-		  		<input type="checkbox">Морковь - 1шт.<br>
-		  		<input type="checkbox">Сельдерев (стебель) - 1шт.<br>
-		  		<input type="checkbox">Чеснок - 2 зубчика.<br>
-		  		<input type="checkbox">Томатная паста - 3 столовые ложки.<br>
-		  		<input type="checkbox">Соль, перец, куркума, паприка - по вкусу<br>
-		  		<input type="checkbox">Паста (Макароны такие с птичкой)<br>
+		  		<input type="checkbox"><span>Фарш - 500гр. </span><br>
+		  		<input type="checkbox"><span>Лук - 1шт. </span><br>
+		  		<input type="checkbox"><span>Морковь - 1шт. </span><br>
+		  		<input type="checkbox"><span>Сельдерев (стебель) - 1шт. </span><br>
+		  		<input type="checkbox"><span>Чеснок - 2 зубчика. </span><br>
+		  		<input type="checkbox"><span>Томатная паста - 3 столовые ложки. </span><br>
+		  		<input type="checkbox"><span>Соль, перец, куркума, паприка - по вкусу </span><br>
+		  		<input type="checkbox"><span>Паста (Макароны такие с птичкой) </span><br>
 	  		</div>
 	  		<p></p>
 	  		<div class="cooking">
@@ -154,13 +154,13 @@
 	 		<summary>Плов</summary>
 	  		<p></p>
 	  		<div class="ingredients">
-		  		<strong>На 1кг. мяса</strong>
-			  		<input type="checkbox">Мясо - 1кг.<br>
-			  		<input type="checkbox">Рис для плова - 1кг.<br>
-			  		<input type="checkbox">Масло - 300мл.<br>
-			  		<input type="checkbox">Лук - 0,5кг.<br>
-			  		<input type="checkbox">Чеснок - 2 зубчика.<br>
-			  		<input type="checkbox">Приправа для плова - 2ст.л.<br>
+		  		<strong>На 1кг. мяса</strong><br>
+			  		<input type="checkbox"><span>Мясо - 1кг. </span><br>
+			  		<input type="checkbox"><span>Рис для плова - 1кг. </span><br>
+			  		<input type="checkbox"><span>Масло - 300мл. </span><br>
+			  		<input type="checkbox"><span>Лук - 0,5кг. </span><br>
+			  		<input type="checkbox"><span>Чеснок - 2 зубчика. </span><br>
+			  		<input type="checkbox"><span>Приправа для плова - 2ст.л. </span><br>
 	  		</div>
 	  		<p></p>
 	  		<div class="cooking">
@@ -184,10 +184,10 @@
 	  		<summary>Чебуреки</summary>
 	  		<p></p>
 	  		<div class="ingredients">
-		  		<input type="checkbox">Вода 300мл<br>
-		  		<input type="checkbox">Яйцо - 1шт.<br>
-		  		<input type="checkbox">Соль - 1 чайная ложка<br>
-		  		<input type="checkbox">Подсолнечное масло - две столовые ложки.<br>
+		  		<input type="checkbox"><span>Вода 300мл </span><br>
+		  		<input type="checkbox"><span>Яйцо - 1шт. </span><br>
+		  		<input type="checkbox"><span>Соль - 1 чайная ложка </span><br>
+		  		<input type="checkbox"><span>Подсолнечное масло - две столовые ложки. </span><br>
 	  		</div>
 	  		<p></p>
 	  		<div class="cooking">
@@ -205,11 +205,11 @@
 	  		<summary>Шурпа</summary>
 	  		<p></p>
 	  		<div class="ingredients">
-		  		<input type="checkbox">Мясо - 1кг <br>
-		  		<input type="checkbox">Лук - 0,5кг<br>
-		  		<input type="checkbox">Морковь - 0,5кг<br>
-		  		<input type="checkbox">Сладкий перец - 2 шт.<br>
-		  		<input type="checkbox">Помидоры - 2 шт.<br>
+		  		<input type="checkbox"><span>Мясо - 1кг  </span><br>
+		  		<input type="checkbox"><span>Лук - 0,5кг </span><br>
+		  		<input type="checkbox"><span>Морковь - 0,5кг </span><br>
+		  		<input type="checkbox"><span>Сладкий перец - 2 шт. </span><br>
+		  		<input type="checkbox"><span>Помидоры - 2 шт. </span><br> 
 		  	</div>
 		  	<p></p>
 	  		<div class="cooking">
@@ -250,11 +250,9 @@
 				<li>Твердый пармезан - 400гр.</li>
 				<li>Мягкая моцарелла - 400гр.</li>
 			</ul>
-
 			  	Обжарить лук и чеснок в масле (сливочное + оливковое\подсолнечное) до прозрачности лука. <br>
 				Добавить томатную пасту и соус сальса, слегка обжарить и добавить стакан воды.<br>
 				Всыпать все приправы, перемешать, 15-20 минут тушить. <br>
-
 				Курица, соль, перец.<br>
 				Куски куры обжарить на раскаленной сковороде до корки. куски куры<br>
 				Половину соуса добавляем в посудину для запекания и впихиваем в соус курицу с коркой.<br>
