--- a/index.html
+++ b/index.html
@@ -279,8 +279,7 @@
 	 	<details>
 	 	<summary class="dish">Макароны с курицей и грибами</summary>
 	  		<p></p>
-	  		<div class="ingredients"> <br>
-	  			
+	  		<div class="ingredients">
 	  				<label>
 				  		<input type="checkbox"> <span>Филе курицы - 400гр. </span><br>
 				  	</label>
