--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
 		<hr >
 	
-		<details>
+		<details   onmousedown="return false" onselectstart="return false">
 	  	<summary class="dish">Бисквитный пирог</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -60,7 +60,7 @@
 		</details>
 	 	<br>
 
-	 	<details>
+	 	<details   onmousedown="return false" onselectstart="return false">
 	  	<summary class="dish">Блинчики</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -110,7 +110,7 @@
 	 	</details>
 	 	<br>
 
-	 	<details>
+	 	<details   onmousedown="return false" onselectstart="return false">
 	  	<summary class="dish">Борщ</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -192,7 +192,7 @@
 		<br>
 	 	
 	 
-		<details>
+		<details   onmousedown="return false" onselectstart="return false">
 	 	<summary class="dish">Лагман</summary>
 	 		<p></p>
 	  		<div class="ingredients">
@@ -241,7 +241,7 @@
 	 	</details>
 	 	<br>
 
-	 	<details>
+	 	<details   onmousedown="return false" onselectstart="return false">
 	 	<summary class="dish">Манты</summary>
 	 		<div class="ingredients">
 	 			<p></p>
@@ -276,7 +276,7 @@
 	 	</details>
 	 	<br>
 
-	 	<details>
+	 	<details   onmousedown="return false" onselectstart="return false">
 	 	<summary class="dish">Макароны с курицей и грибами</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -320,7 +320,7 @@
 		</details>
 	 	<br>
 
-	 	<details>
+	 	<details   onmousedown="return false" onselectstart="return false">
 		<summary class="dish">Мясо с фасолью</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -363,7 +363,7 @@
 		</details>
 	 	<br>
 
-	 	<details>
+	 	<details   onmousedown="return false" onselectstart="return false">
 	  	<summary class="dish">Паста</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -409,7 +409,7 @@
 	 	</details>
 	 	<br>
 
-	 	<details>
+	 	<details   onmousedown="return false" onselectstart="return false">
 	 	<summary class="dish">Плов</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -454,7 +454,7 @@
 	 	</details>
 	 	<br>
 
-	 	<details>
+	 	<details   onmousedown="return false" onselectstart="return false">
 		<summary class="dish">Рагу</summary>
 	  		<p></p>
 	  		<div class="ingredients">	
@@ -497,7 +497,7 @@
 		</details>
 	 	<br>
 
-	 	<details>
+	 	<details   onmousedown="return false" onselectstart="return false">
 		<summary class="dish">Рёбра свиные</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -534,7 +534,7 @@
 		</details>
 	 	<br>
 
-	 	<details>
+	 	<details   onmousedown="return false" onselectstart="return false">
 	  	<summary class="dish">Чебуреки</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -576,7 +576,7 @@
 	 	</details>
 	 	<br>
 
-	 	<details>
+	 	<details   onmousedown="return false" onselectstart="return false">
 	  	<summary class="dish">Шашлык</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -614,7 +614,7 @@
 		</details>
 	 	<br>
 
-	 	<details>
+	 	<details   onmousedown="return false" onselectstart="return false">
 	  	<summary class="dish">Шурпа</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -653,7 +653,7 @@
 	 	</details>
 	 	<br>
 	 	
-		<details>
+		<details   onmousedown="return false" onselectstart="return false">
 	  	<summary class="dish">Энчилада</summary>
 	  		<p></p>
 	  		<div class="ingredients">
