--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
 		<hr >
 	
-		<details   onmousedown="return false" onselectstart="return false">
+		<details onmousedown="return false">
 	  	<summary class="dish">Бисквитный пирог</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -60,7 +60,7 @@
 		</details>
 	 	<br>
 
-	 	<details   onmousedown="return false" onselectstart="return false">
+	 	<details onmousedown="return false">
 	  	<summary class="dish">Блинчики</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -110,7 +110,7 @@
 	 	</details>
 	 	<br>
 
-	 	<details   onmousedown="return false" onselectstart="return false">
+	 	<details onmousedown="return false">
 	  	<summary class="dish">Борщ</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -172,7 +172,7 @@
 						  	 	<ul> 
 						  	 		<li>На сковороде пожарить лук до золотистости</li>
 						  	 		<li>Добавить перец болгарский, натёртую морковь, натёртую свеклу. </li>
-						  	 		<li>Помидор разрезать на две части и тереть в сковородку без шкурки/</li> 
+						  	 		<li>Помидор разрезать на две части и тереть в сковородку без шкурки</li> 
 						  	 		<li>Добавить 1 сл.л. яблочного уксуса</li> 
 						  	 		<li>Тушить под крышкой на небольшом огне (для индукции 100°) 10-20 мин.</li> 
 						  	 	</ul>
@@ -192,7 +192,7 @@
 		<br>
 	 	
 	 
-		<details   onmousedown="return false" onselectstart="return false">
+		<details onmousedown="return false">
 	 	<summary class="dish">Лагман</summary>
 	 		<p></p>
 	  		<div class="ingredients">
@@ -241,7 +241,7 @@
 	 	</details>
 	 	<br>
 
-	 	<details   onmousedown="return false" onselectstart="return false">
+	 	<details onmousedown="return false">
 	 	<summary class="dish">Манты</summary>
 	 		<div class="ingredients">
 	 			<p></p>
@@ -276,7 +276,7 @@
 	 	</details>
 	 	<br>
 
-	 	<details   onmousedown="return false" onselectstart="return false">
+	 	<details onmousedown="return false">
 	 	<summary class="dish">Макароны с курицей и грибами</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -308,7 +308,7 @@
 					<li>Затем отправляем к ней шампиньоны.</li>
 					<li>Обжариваем все вместе, помешивая, до золотистости (Пока из грибов не испарится жидкость). </li>
 					<li>Затем всыпаем лук, перемешиваем и жарим минуту. Затем кидаем чеснок, поступаем также. </li>
-					<li>Вливаем сливки, уменьшаем огонь до минимума и ждем пока забулькает. </li>
+					<li>Вливаем сливки, уменьшаем огонь до минимума и ждем пока закипит. </li>
 					<li>Пробуем на соль и доперчиваем.</li>
 					<li>Сварившуюся аль-денте пасту (на минуту меньше, чем указано на упаковке), сливаем и отправляем в соус. Перемешиваем и выключаем тут же.</li>
 				</ul>
@@ -320,7 +320,7 @@
 		</details>
 	 	<br>
 
-	 	<details   onmousedown="return false" onselectstart="return false">
+	 	<details onmousedown="return false">
 		<summary class="dish">Мясо с фасолью</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -363,7 +363,7 @@
 		</details>
 	 	<br>
 
-	 	<details   onmousedown="return false" onselectstart="return false">
+	 	<details onmousedown="return false">
 	  	<summary class="dish">Паста</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -378,7 +378,7 @@
 				  		<input type="checkbox"> <span>Морковь - 1шт. </span><br>
 				  	</label>
 				  	<label>
-				  		<input type="checkbox"> <span>Сельдерев (стебель) - 1шт. </span><br>
+				  		<input type="checkbox"> <span>Сельдерей (стебель) - 1шт. </span><br>
 				  	</label>
 				  	<label>
 				  		<input type="checkbox"> <span>Чеснок - 2 зубчика. </span><br>
@@ -409,7 +409,7 @@
 	 	</details>
 	 	<br>
 
-	 	<details   onmousedown="return false" onselectstart="return false">
+	 	<details onmousedown="return false">
 	 	<summary class="dish">Плов</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -454,7 +454,7 @@
 	 	</details>
 	 	<br>
 
-	 	<details   onmousedown="return false" onselectstart="return false">
+	 	<details onmousedown="return false">
 		<summary class="dish">Рагу</summary>
 	  		<p></p>
 	  		<div class="ingredients">	
@@ -497,7 +497,7 @@
 		</details>
 	 	<br>
 
-	 	<details   onmousedown="return false" onselectstart="return false">
+	 	<details onmousedown="return false">
 		<summary class="dish">Рёбра свиные</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -534,7 +534,7 @@
 		</details>
 	 	<br>
 
-	 	<details   onmousedown="return false" onselectstart="return false">
+	 	<details onmousedown="return false">
 	  	<summary class="dish">Чебуреки</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -576,7 +576,7 @@
 	 	</details>
 	 	<br>
 
-	 	<details   onmousedown="return false" onselectstart="return false">
+	 	<details onmousedown="return false">
 	  	<summary class="dish">Шашлык</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -614,7 +614,7 @@
 		</details>
 	 	<br>
 
-	 	<details   onmousedown="return false" onselectstart="return false">
+	 	<details onmousedown="return false">
 	  	<summary class="dish">Шурпа</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -653,7 +653,7 @@
 	 	</details>
 	 	<br>
 	 	
-		<details   onmousedown="return false" onselectstart="return false">
+		<details onmousedown="return false">
 	  	<summary class="dish">Энчилада</summary>
 	  		<p></p>
 	  		<div class="ingredients">
@@ -753,7 +753,7 @@
 </html>
 
 
-<!-- <details>
+<!-- <details onmousedown="return false">
 	<summary class="dish">Name</summary>
 	  		<p></p>
 	  		<div class="ingredients">	
