--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	  			<ul>
 				  	 <li>Яйца и сахар взбивать 15 минут.</li> 
 				  	 <li>Добавить молоко. </li>
-				  	 <li>Сливочное масло. </li>
+				  	 <li>Растительное масло. </li>
 				  	 <li>Добавить муку, разрыхлитель и ванилин.</li>
 				  	 <li>Замешиваем тесто.</li>
 				  	 <li>Выпекать 50 минут в мультиварке (режим "Выпечка")</li>
