--- a/index.html
+++ b/index.html
@@ -425,7 +425,10 @@
 					  		<input type="checkbox"> <span>Масло - 300мл. </span><br>
 					  	</label>
 				  		<label>
-					  		<input type="checkbox"> <span>Лук - 0,5кг. </span><br>
+					  		<input type="checkbox"> <span>Лук - 4 шт. </span><br>
+					  	</label>
+						<label>
+					  		<input type="checkbox"> <span>Морковь - 4 шт. </span><br>
 					  	</label>
 				  		<label>
 					  		<input type="checkbox"> <span>Чеснок - 2 зубчика. </span><br>
