--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet'>
 	<link rel="stylesheet" type="text/css" href="css.css">
 	<meta name="viewport" content="width=device-width, user-scalable=yes">
+	<link rel="icon" type="image/png" href="cooking.png">
 </head>
 <body>	
 	
