--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 	<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet'>
 	<link rel="stylesheet" type="text/css" href="css.css">
 	<meta name="viewport" content="width=device-width, user-scalable=yes">
-	<link rel="icon" type="image/png" href="cooking.png">
+	<link rel="icon" type="image/png" href="cooking_logo2.png">
 </head>
-<body>	
-	
+<body>		
+
+	<img id="logo" src="cooking_logo2.png">
 	<h1 id="top">Рецепты</h1>
 	
 		<hr >
@@ -51,7 +52,7 @@
 	  			<ul>
 				  	 <li>Яйца и сахар взбивать 15 минут.</li> 
 				  	 <li>Добавить молоко. </li>
-				  	 <li>Растительное масло. </li>
+				  	 <li>Сливочное масло. </li>
 				  	 <li>Добавить муку, разрыхлитель и ванилин.</li>
 				  	 <li>Замешиваем тесто.</li>
 				  	 <li>Выпекать 50 минут в мультиварке (режим "Выпечка")</li>
@@ -426,10 +427,7 @@
 					  		<input type="checkbox"> <span>Масло - 300мл. </span><br>
 					  	</label>
 				  		<label>
-					  		<input type="checkbox"> <span>Лук - 4 шт. </span><br>
-					  	</label>
-						<label>
-					  		<input type="checkbox"> <span>Морковь - 4 шт. </span><br>
+					  		<input type="checkbox"> <span>Лук - 0,5кг. </span><br>
 					  	</label>
 				  		<label>
 					  		<input type="checkbox"> <span>Чеснок - 2 зубчика. </span><br>
