--- a/index.html
+++ b/index.html
@@ -192,8 +192,39 @@
 			<hr>	
 		</details>
 		<br>
-	 	
-	 
+	 	<details onmousedown="return false">
+		<summary class="dish">Котлеты "Хмель"</summary>
+	  		<p></p>
+	  		<div class="ingredients">	
+	  				<label>
+				  		<input type="checkbox">	<span>Мясо свинина - 650гр.</span><br>
+				  		<input type="checkbox">	<span>Мясо говядина - 350гр.</span><br>
+				  		<input type="checkbox">	<span>Батон</span><br>
+				  		<input type="checkbox">	<span>Хлеб</span><br>
+				  		<input type="checkbox">	<span>Молоко</span><br>
+				  		<input type="checkbox">	<span>Картошка - 2шт.</span><br>
+				  		<input type="checkbox">	<span>Приправа для фарша</span><br>
+				  		<input type="checkbox">	<span>Соль, перец</span><br>
+				  		<input type="checkbox">	<span>Чеснок</span><br>
+				  		<input type="checkbox">	<span>Лук</span><br>
+				  		<input type="checkbox">	<span>Панировочные сухари</span><br>
+				  	</label>
+			</div>
+			<p></p>
+	  		<div class="cooking">
+	  			 <ul>
+				  	 <li>Вымачивать батон и хлеб в молоке</li> 
+				  	 <li>Крутить фарш с луком и картошкой в мясорубке</li> 
+				  	 <li>Добавить в фарш приправы, соль</li>
+				  	 <li>Смазать руки растительным маслом и формировать котлеты</li> 
+		  	 	</ul>
+		  	</div>
+		  	<div class="note">
+				 <p>Говядину можно заменить на индейку, пропорции те же.</p>
+			</div> 
+		  	<hr>
+		</details>
+	 	<br>
 		<details onmousedown="return false">
 	 	<summary class="dish">Лагман</summary>
 	 		<p></p>
@@ -772,5 +803,4 @@
 		  	<hr>
 	</details>
 	 	<br> -->
-
 
