--- a/index.html
+++ b/index.html
@@ -198,15 +198,35 @@
 	  		<div class="ingredients">	
 	  				<label>
 				  		<input type="checkbox">	<span>Мясо свинина - 650гр.</span><br>
+				  	</label>
+				  	<label>
 				  		<input type="checkbox">	<span>Мясо говядина - 350гр.</span><br>
+				  	</label>
+				  	<label>
 				  		<input type="checkbox">	<span>Батон</span><br>
+				  	</label>
+				  	<label>
 				  		<input type="checkbox">	<span>Хлеб</span><br>
+				  	</label>
+				  	<label>
 				  		<input type="checkbox">	<span>Молоко</span><br>
+				  	</label>
+				  	<label>
 				  		<input type="checkbox">	<span>Картошка - 2шт.</span><br>
+				  	</label>
+				  	<label>
 				  		<input type="checkbox">	<span>Приправа для фарша</span><br>
+				  	</label>
+				  	<label>
 				  		<input type="checkbox">	<span>Соль, перец</span><br>
+				  	</label>
+				  	<label>
 				  		<input type="checkbox">	<span>Чеснок</span><br>
+				  	</label>
+				  	<label>
 				  		<input type="checkbox">	<span>Лук</span><br>
+				  	</label>
+				  	<label>
 				  		<input type="checkbox">	<span>Панировочные сухари</span><br>
 				  	</label>
 			</div>
