--- a/index.html
+++ b/index.html
@@ -611,6 +611,9 @@
 				  	<label>
 				  		<input type="checkbox"> <span>Лук 0.5кг. </span><br>
 				  	</label>
+					 <label>
+				  		<input type="checkbox"> <span>Мука </span><br>
+				  	</label>
 			  
 	  		</div>
 	  		<p></p>
