--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
 
 
 </body>		
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   
  <script type="text/javascript">
 	  	$(function() {
