--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
 	<link rel="stylesheet" type="text/css" href="css.css">
 	<meta name="viewport" content="width=device-width, user-scalable=yes">
 	<link rel="shortcut icon" type="image/png" href="cooking_logo2.png">
-
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  
-
-
 </head>
 <body>		
 	<div id="head">
@@ -818,7 +813,7 @@
 
 		
 	</script>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 </html>
 
 
