--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<img id="logo" src="cooking_logo2.png">
 	
 	<div style="display: none" id="music">
-	<iframe id="yamusic" frameborder="0" style="border:none;width:50px;height:50px;" width="100%" height="70" src="https://music.yandex.ru/iframe/#track/31581264/3830779"><a href='https://music.yandex.ru/album/3830779/track/31581264'>Song To Say Goodbye</a> — <a href='https://music.yandex.ru/artist/36830'></a> </iframe>
+	<iframe frameborder="0" style="border:none;width:50px;height:50px;" width="100%" height="70" src="https://music.yandex.ru/iframe/#track/31581264/3830779"><a href='https://music.yandex.ru/album/3830779/track/31581264'>Song To Say Goodbye</a> — <a href='https://music.yandex.ru/artist/36830'></a> </iframe>
 	</div>
 	<h1>Рецепты</h1>
 	<button id="mainButton">Основное</button>
@@ -814,13 +814,8 @@
 			})
 		var logo = document.getElementById("logo")
 		var music = document.getElementById("music")
-		var yamusic = document.getElementById("yamusic")
 		logo.addEventListener("click", () => {
 			music.style.display = "inline"
-
-			})
-		music.addEventListener("click", () => {
-			yamusic.style="border:none;width:100%;height:240px"
 
 			})
 		
