--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<img id="logo" src="cooking_logo2.png">
 	
 	<div style="display: none" id="music">
-	<iframe frameborder="0" style="border:none;width:50px;height:50px;" width="100%" height="70" src="https://music.yandex.ru/iframe/#track/31581264/3830779"><a href='https://music.yandex.ru/album/3830779/track/31581264'>Song To Say Goodbye</a> — <a href='https://music.yandex.ru/artist/36830'></a> </iframe>
+	<iframe frameborder="0" style="border:none;width:50px;height:50px;" width="100%" height="70" src="https://music.yandex.ru/iframe/#playlist/oduvancheg666/3"> <a href='https://music.yandex.ru/users/oduvancheg666/playlists/3'></a> — <a href='https://music.yandex.ru/users/oduvancheg666'>oduvancheg666</a> </iframe>
 	</div>
 	<h1>Рецепты</h1>
 	<button id="mainButton">Основное</button>
