--- a/index.html
+++ b/index.html
@@ -24,29 +24,97 @@
 	<div id="goTop"><img src="top.png" width="30px" height="30px" /></div>
 
 		<hr >
-			<div id="salateContent">
-			<details onmousedown="return false">
-				<summary class="dish">Салат из морковки и капусты</summary>
-				  		<p></p>
-				  		<div class="ingredients">	
-				  				<label>
-							  		<input type="checkbox">	<span>Морковь</span><br>
-							  	</label>
-							  	<label>
-							  		<input type="checkbox">	<span>Капуста</span><br>
-							  	</label>
-						</div>
-						<p></p>
-				  		<div class="cooking">
-				  			 <ul>
-							  	 <li>Нарезать морковь и капусту</li> 
-					  	 	</ul>
-					  	 	 <ul>
-							  	 <li>Смешать</li> 
-					  	 	</ul>
-					  	</div>
-					  	<hr>
-				</details>
+	<div id="salateContent">
+
+		<details onmousedown="return false">
+  		<summary class="dish">Гранатовый браслет</summary>
+        	<p></p>
+        	<div class="ingredients">  
+	            <label>
+	              <input type="checkbox">  <span>Курица 300г</span><br>
+	            </label>
+	            <label>
+	              <input type="checkbox">  <span>Лук 1-2шт</span><br>
+	            </label>
+	            <label>
+	              <input type="checkbox">  <span>Картошка 300г</span><br>
+	            </label>
+	            <label>
+	              <input type="checkbox">  <span>Свекла варёная 300г</span><br>
+	            </label>
+	            <label>
+	              <input type="checkbox">  <span>Грецкий орех 50г</span><br>
+	            </label>
+	            <label>
+	              <input type="checkbox">  <span>Гранат 1-2шт</span><br>
+	            </label>
+	            <label>
+	              <input type="checkbox">  <span>Соль</span><br>
+	            </label>
+	            <label>
+	              <input type="checkbox">  <span>Майонез</span><br>
+	            </label>
+			</div>
+			    <p></p>
+			    <div class="cooking">
+			    <ul>
+			        <li>Отварить картошку, свеклу, курицу</li> 
+					<li>Лук и курицу обжарить</li> 
+			        <li>Орехи обжарить и смешать с тёртой свеклой</li> 
+					<li>1-слой Картошку натереть на тёрке</li> 
+					<li>2-слой Курица + лук</li> 
+					<li>Майонез</li> 
+					<li>3-слой Свекла + орехи</li> 
+					<li>Майонез</li> 
+					<li>Гранат</li> 
+			    </ul>
+			    </div>
+        <hr>
+  		</details>
+  		<br>
+
+		<details onmousedown="return false">
+  		<summary class="dish">Селёдка под шубой</summary>
+        	<p></p>
+		        <div class="ingredients">  
+		            <label>
+		              <input type="checkbox">  <span>Селёдка</span><br>
+		            </label>
+		            <label>
+		              <input type="checkbox">  <span>Лук</span><br>
+		            </label>
+		            <label>
+		              <input type="checkbox">  <span>Картошка</span><br>
+		            </label>
+		            <label>
+		              <input type="checkbox">  <span>Морковь</span><br>
+		            </label>
+		            <label>
+		              <input type="checkbox">  <span>Свекла</span><br>
+		            </label>
+		            <label>
+		              <input type="checkbox">  <span>Майонез</span><br>
+		            </label>
+
+		      </div>
+		      <p></p>
+		        <div class="cooking">
+		           <ul>
+		             <li>Отварить картошку, свеклу, морковь</li> 
+		             <li>Разделать селёдку и нарезать</li> 
+		             <li>1-слой Картошку натереть на тёрке</li> 
+		             <li>Майонез</li> 
+		             <li>2-слой Селёдка + Лук</li> 
+		             <li>Майонез</li> 
+		             <li>3-слой Морковь</li> 
+		             <li>4-слой Свекла</li> 
+		             <li>Повторить все слои</li> 
+		           </ul>
+		        </div>
+		        <hr>
+		</details>
+		<br>
+
 	 			<br> 
 			</div>
 		<div id="mainContent">
@@ -225,7 +293,88 @@
 			<hr>	
 		</details>
 		<br>
-	 	
+		<details onmousedown="return false">
+  		<summary class="dish">Гороховый суп</summary>
+        	<p></p>
+        	<div class="ingredients">  
+	            <label>
+	              <input type="checkbox">  <span>Горох 300-350г</span><br>
+	            </label>
+	            <label>
+	              <input type="checkbox">  <span>Бекон 200г</span><br>
+	            </label>
+	            <label>
+	              <input type="checkbox">  <span>Лук 1шт</span><br>
+	            </label>
+	            <label>
+	              <input type="checkbox">  <span>Морковь 1-2шт</span><br>
+	            </label>
+	            <label>
+	              <input type="checkbox">  <span>Сельдерей</span><br>
+	            </label>
+	            <label>
+	              <input type="checkbox">  <span>Копчённая курица или Копч.свин.ребра 500г</span><br>
+	            </label>
+	            <label>
+	              <input type="checkbox">  <span>Вода 1,5л</span><br>
+	            </label>
+	              <input type="checkbox">  <span>Соль, перец</span><br>
+	            </label>
+      		</div>
+      		<p></p>
+        	<div class="cooking">
+	           	<ul>
+	            	<li>Горох замочить на 2ч</li> 
+	        		<li>Нарезать Морковь, Сельдерей</li> 
+	            	<li>Обжарить бекон</li> 
+	             	<li>Лук добавить</li> 
+	             	<li>Морковь, Сельдерей добавить</li> 
+	             	<li>Через 5мин влить воду</li> 
+	             	<li>Довести до кипения и варить 10мин</li> 
+	             	<li>Горох добавить</li> 
+	             	<li>Довести до кипения, уменьшить температуру и варить 30мин</li> 
+	             	<li>Курицу(или копчёности) добавить</li> 
+	             	<li>Варить 30мин</li> 
+	           </ul>
+	        </div>
+	        <hr>
+  		</details>
+  		<br>
+
+
+		<details onmousedown="return false">
+  		<summary class="dish">Гречка</summary>
+        	<p></p>
+		        <div class="ingredients">  
+		            <label>
+		              <input type="checkbox">  <span>Гречка - 1 стакан</span><br>
+		            </label>
+		            <label>
+		              <input type="checkbox">  <span>Вода - 2,5 стакана</span><br>
+		            </label>
+		            <label>
+		              <input type="checkbox">  <span>Соль</span><br>
+		            </label>
+		            <label>
+		              <input type="checkbox">  <span>Масло</span><br>
+		            </label>
+
+		      	</div>
+      			<p></p>
+		        <div class="cooking">
+		           <ul>
+		             <li>Промыть гречку</li> 
+		             <li>Прокалить на сковороде</li> 
+		             <li>Воду посолить и довести до кипения</li> 
+		             <li>Гречку в воду</li> 
+		             <li>Варить 10 мин без крышки</li>  
+		             <li>Масло добавить</li> 
+		             <li>Уменьшить огонь и варить под крышкой 5-7мин</li> 
+		           </ul>
+		        </div>
+       			<hr>
+  		</details>
+	 	<br>
 	 
 		<details onmousedown="return false">
 	 	<summary class="dish">Лагман</summary>
@@ -567,6 +716,39 @@
 		  	</div>
 		  	<hr>
 		</details>
+	 	<br>
+
+	 	<details onmousedown="return false">
+		<summary class="dish">Рис</summary>
+		        <p></p>
+		        <div class="ingredients">  
+		            <label>
+		            <input type="checkbox">  <span>Рис - 1 стакан</span><br>
+		            </label>
+		            <label>
+		            <input type="checkbox">  <span>Вода - 2 стакана</span><br>
+		            </label>
+		            <label>
+		            <input type="checkbox">  <span>Соль</span><br>
+		            </label>
+		            <label>
+		            <input type="checkbox">  <span>Масло</span><br>
+		            </label>
+      			</div>
+		      			<p></p>
+		        <div class="cooking">
+		           <ul>
+		             <li>Промыть рис 5-7 раз и замочить в воде(отдельно)</li> 
+		             <li>Воду посолить и довести до кипения</li> 
+		             <li>Добавить рис</li> 
+		             <li>Варить 5 мин без крышки</li> 
+		             <li>Добавить масло</li> 
+		             <li>Убавить огонь и варить под крышкой 5-7мин</li> 
+		           </ul>
+		        </div>
+		       	<hr>
+		</details>
+
 	 	<br>
 
 	 	<details onmousedown="return false">
