--- a/index.html
+++ b/index.html
@@ -72,7 +72,49 @@
         <hr>
   		</details>
   		<br>
-
+	<details onmousedown="return false">
+	<summary class="dish">Оливье</summary>
+	  		<p></p>
+	  		<div class="ingredients">	
+	  				<label>
+				  		<input type="checkbox">	<span>Морковь 2-3 штуки небольших</span><br>
+				  	</label>
+				  	<label>
+				  		<input type="checkbox">	<span>Картошка 3-5 шт небольших</span><br>
+				  	</label>
+				  	<label>
+				  		<input type="checkbox">	<span>Колбаса вареная 300-500гр</span><br>
+				  	</label>
+				  	<label>
+				  		<input type="checkbox">	<span>Зелёный горошек 1 банка</span><br>
+				  	</label>
+				  	<label>
+				  		<input type="checkbox">	<span>Лук 1шт</span><br>
+				  	</label>
+				  	<label>
+				  		<input type="checkbox">	<span>Огурец (можно соленый) 2шт.</span><br>
+				  	</label>
+				  	<label>
+				  		<input type="checkbox">	<span>Майонез</span><br>
+				  	</label>
+			</div>
+			<p></p>
+	  		<div class="cooking">
+	  			 <ul>
+				  	 <li>Овощи отвариваем в мундире, остужаем, очищаем и нарезаем кубиками.</li> 
+		  	 	</ul>
+		  	 	<ul>
+				  	 <li>Колбасу и огурец нарезаем кубиками, добавляем горошек.</li> 
+		  	 	</ul>
+		  	 	<ul>
+				  	 <li>Лук нарезать мелко.</li> 
+		  	 	</ul>
+		  	 	<ul>
+				  	 <li>Посолить, перемешать, заправить майонезом.</li> 
+		  	 	</ul>
+		  	</div>
+		  	<hr>
+	</details>	
 		<details onmousedown="return false">
   		<summary class="dish">Селёдка под шубой</summary>
         	<p></p>
