--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
 	  				<label>
 				  		<input type="checkbox">	<span>Морковь 2-3 штуки небольших</span><br>
 				  	</label>
+					<label>
+				  		<input type="checkbox">	<span>Яйца 2-3шт</span><br>
+				  	</label>
 				  	<label>
 				  		<input type="checkbox">	<span>Картошка 3-5 шт небольших</span><br>
 				  	</label>
@@ -101,7 +104,7 @@
 			<p></p>
 	  		<div class="cooking">
 	  			 <ul>
-				  	 <li>Овощи отвариваем в мундире, остужаем, очищаем и нарезаем кубиками.</li> 
+				  	 <li>Овощи и яйца отвариваем, остужаем, очищаем и нарезаем кубиками.</li> 
 		  	 	</ul>
 		  	 	<ul>
 				  	 <li>Колбасу и огурец нарезаем кубиками, добавляем горошек.</li> 
