--- a/index.html
+++ b/index.html
@@ -485,6 +485,9 @@
 				  	<label>
 				  		<input type="checkbox">	<span>Соль, перец - по вкусу </span><br>
 				  	</label>
+					<label>
+				  	 	<input type="checkbox">	<span>	Карташока - 5-7шт.  </span><br>
+				  	</label>
 				  	
 			
 	  		</div>
@@ -929,6 +932,9 @@
 				  	</label>
 				  	<label>
 				  		<input type="checkbox"> <span>Помидоры - 2 шт. </span><br> 
+				  	</label>
+					<label>
+				  	 	<input type="checkbox">	<span>	Карташока - 5-7шт.  </span><br>
 				  	</label>
 		  		
 		  	</div>
