--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 				  		<input type="checkbox">	<span>Сахар - 3-5ст.л.</span><br>
 				  	</label>
 				  	<label>
-				  		<input type="checkbox">	<span>Соль - 2ч.л.</span><br>
+				  		<input type="checkbox">	<span>Соль - 0.5 ч.л.</span><br>
 				  	</label>
 				  	<label>
 				  		<input type="checkbox">	<span>Растительное масло.</span><br>
@@ -248,6 +248,7 @@
 				  	 <li>Добавить молоко. </li>
 				  	 <li>Добавлять муку, по чуть-чуть помешивая тесто</li>
 				  	 <li>Жарить примерно на 130° </li>
+					 <li>Готовый блинчик смазать сливочным маслом. </li>
 				  	 <li>Сковородку смазывать растительным маслом после каждого блинчика. </li>
 		  	 	</ul>
 		  	 </div>
