--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 				  		<input type="checkbox"> <span>Морковь - 1шт. </span><br>
 				  	</label>
 				  	<label>
-				  		<input type="checkbox"> <span>Сельдерей (стебель) - 1шт. </span><br>
+				  		<input type="checkbox"> <span>Стебель сельдерея (не обязательно) - 1шт. </span><br>
 				  	</label>
 				  	<label>
 				  		<input type="checkbox"> <span>Чеснок - 2 зубчика. </span><br>
@@ -666,7 +666,6 @@
 	  			<ul>
 				  	<li>Лук, морковь, чеснок, сельдерей порезать и жарить 10 мин. </li>
 					<li>Добавить фарш, размять комочки, жарить 10 мин. </li>
-					<li>Добавить немного молока\сливок, жарить 5 мин. </li>
 					<li>Добавить специи, размешать, жарить 5 мин. </li>
 					<li>Добавить томатную пасту, жарить 15 мин. </li>
 					<li>Макароны приготовить Al dente (<em>почти готово</em>).</li>
@@ -696,6 +695,9 @@
 					  	</label>
 				  		<label>
 					  		<input type="checkbox"> <span>Чеснок - 2 зубчика. </span><br>
+					  	</label>
+						<label>
+					  		<input type="checkbox"> <span>Морковь - 2-3шт. </span><br>
 					  	</label>
 				  		<label>
 					  		<input type="checkbox"> <span>Приправа для плова - 2ст.л. </span><br>
