--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
 	 	<br>
 
 		<details onmousedown="return false">
-	<summary class="dish">Перец фарширвоанный "Лара"</summary>
+	<summary class="dish">Перец фаршированный "Лара"</summary>
 	  		<p></p>
 	  		<div class="ingredients">	
 	  				<label>
